tile css to prevent overflow

--- a/client/src/components/Tile.css
+++ b/client/src/components/Tile.css
@@ -8,6 +8,7 @@
     width: 19%;
     height: 19%;
     background-color: #eee;
+    overflow: hidden;
 }
 
 .tile.player.active {
@@ -32,6 +33,9 @@
 
 .tile p {
     margin: 0;
+    width: 100%;
+    padding: 0.5em;
+    word-wrap: break-word;
 }
 
 .tile.revealed p {
